grammars/mysql/grammar.js
    source_file: $ => seq(
      repeat(choice(seq($._top_statement, ';'), ';')),
      optional($._top_statement),
    ),

    // BEGIN starts a transaction only outside a stored program. Inside one,
    // it starts a block.
    _top_statement: $ => choice(
      $._statement,
      alias($._begin_work, $.start_transaction_statement),
    ),

    select_statement: $ => $._query_expression,

    _query_expression: $ => seq(
      optional($.with_clause),
      $._query_body,
      optional($.order_by_clause),
      optional($.limit_clause),
      repeat(choice($.into_clause, $.locking_clause)),
    ),

    with_clause: $ => seq(
      kw('WITH'),
      optional(kw('RECURSIVE')),
      commaSep1($.cte),
    ),

    cte: $ => seq(
      field('name', $.identifier),
      optional($.column_list),
      kw('AS'),
      $.subquery,
    ),

    _query_body: $ => choice(
      $.select,
      $.set_operation,
      $.parenthesized_query,
    ),

    parenthesized_query: $ => prec(1, parens($._query_expression)),

    // INTERSECT binds more tightly than UNION and EXCEPT.
    set_operation: $ => choice(
      prec.left(1, seq(
        field('left', $._query_body),
        field('operator', choice(kw('UNION'), kw('EXCEPT'))),
        optional(choice(kw('ALL'), kw('DISTINCT'))),
        field('right', $._query_body),
      )),
      prec.left(2, seq(
        field('left', $._query_body),
        field('operator', kw('INTERSECT')),
        optional(choice(kw('ALL'), kw('DISTINCT'))),
        field('right', $._query_body),
      )),
    ),

    select: $ => prec.right(seq(
      kw('SELECT'),
      repeat($._select_modifier),
      commaSep1($._select_item),
      optional($.into_clause),
      optional($.from_clause),
      optional($.where_clause),
      optional($.group_by_clause),
      optional($.having_clause),
      optional($.window_clause),
    )),

    _select_modifier: _ => choice(
      kw('ALL'),
      kw('DISTINCT'),
      kw('DISTINCTROW'),
      kw('HIGH_PRIORITY'),
      kw('STRAIGHT_JOIN'),
      kw('SQL_SMALL_RESULT'),
      kw('SQL_BIG_RESULT'),
      kw('SQL_BUFFER_RESULT'),
      kw('SQL_NO_CACHE'),
      kw('SQL_CALC_FOUND_ROWS'),
    ),

    _select_item: $ => choice(
      $._expression,
      $.aliased_expression,
      $.all_columns,
    ),

    aliased_expression: $ => seq(
      field('value', $._expression),
      optional(kw('AS')),
      field('alias', choice($.identifier, $.string)),
    ),

    all_columns: $ => seq(
      optional(seq(
        optional(seq(field('schema', $.identifier), '.')),
        field('table', $.identifier),
        '.',
      )),
      '*',
    ),

    into_clause: $ => seq(
      kw('INTO'),
      choice(
        seq(
          kw('OUTFILE'),
          field('file', $.string),
          optional($._character_set),
          optional($._field_options),
          optional($._line_options),
        ),
        seq(kw('DUMPFILE'), field('file', $.string)),
        commaSep1(choice($.user_variable, $.identifier)),
      ),
    ),

    _character_set: $ => seq(
      choice(kws('CHARACTER', 'SET'), kw('CHARSET')),
      field('charset', $._charset_name),
    ),

    _charset_name: $ => choice($.identifier, $.string, kw('BINARY')),

    _field_options: $ => seq(
      choice(kw('FIELDS'), kw('COLUMNS')),
      repeat1(choice(
        seq(kws('TERMINATED', 'BY'), $.string),
        seq(optional(kw('OPTIONALLY')), kws('ENCLOSED', 'BY'), $.string),
        seq(kws('ESCAPED', 'BY'), $.string),
      )),
    ),

    _line_options: $ => seq(
      kw('LINES'),
      repeat1(choice(
        seq(kws('STARTING', 'BY'), $.string),
        seq(kws('TERMINATED', 'BY'), $.string),
      )),
    ),

    from_clause: $ => seq(
      kw('FROM'),
      choice(kw('DUAL'), commaSep1($._table_reference)),
    ),

    _table_reference: $ => choice(
      $.table_reference,
      $.derived_table,
      $.join,
      parens(commaSep1($._table_reference)),
    ),

    table_reference: $ => prec.right(seq(
      optional(seq(field('schema', $.identifier), '.')),
      field('name', $.identifier),
      optional($.partition_list),
      optional(seq(optional(kw('AS')), field('alias', $.identifier))),
      repeat($.index_hint),
    )),

    partition_list: $ => seq(kw('PARTITION'), parens(commaSep1($.identifier))),

    derived_table: $ => prec.right(seq(
      optional(kw('LATERAL')),
      $.subquery,
      optional(seq(
        optional(kw('AS')),
        field('alias', $.identifier),
        optional($.column_list),
      )),
    )),

    index_hint: $ => seq(
      choice(kw('USE'), kw('IGNORE'), kw('FORCE')),
      choice(kw('INDEX'), kw('KEY')),
      optional(seq(
        kw('FOR'),
        choice(kw('JOIN'), kws('ORDER', 'BY'), kws('GROUP', 'BY')),
      )),
      parens(optional(commaSep1(choice($.identifier, kw('PRIMARY'))))),
    ),

    join: $ => prec.left(seq(
      field('left', $._table_reference),
      choice(
        seq(optional(choice(kw('INNER'), kw('CROSS'))), kw('JOIN')),
        kw('STRAIGHT_JOIN'),
        seq(choice(kw('LEFT'), kw('RIGHT')), optional(kw('OUTER')), kw('JOIN')),
        seq(
          kw('NATURAL'),
          optional(choice(
            kw('INNER'),
            seq(choice(kw('LEFT'), kw('RIGHT')), optional(kw('OUTER'))),
          )),
          kw('JOIN'),
        ),
      ),
      field('right', $._table_reference),
      optional(choice(
        seq(kw('ON'), field('condition', $._expression)),
        seq(kw('USING'), parens(commaSep1(field('using', $.identifier)))),
      )),
    )),

    where_clause: $ => seq(kw('WHERE'), $._expression),

    group_by_clause: $ => seq(
      kws('GROUP', 'BY'),
      commaSep1($._expression),
      optional(kws('WITH', 'ROLLUP')),
    ),

    having_clause: $ => seq(kw('HAVING'), $._expression),

    window_clause: $ => seq(kw('WINDOW'), commaSep1($.window_definition)),

    window_definition: $ => seq(
      field('name', $.identifier),
      kw('AS'),
      $.window_specification,
    ),

    window_specification: $ => parens(seq(
      optional(field('name', $.identifier)),
      optional(seq(kws('PARTITION', 'BY'), commaSep1($._expression))),
      optional($.order_by_clause),
      optional($.frame_clause),
    )),

    frame_clause: $ => seq(
      choice(kw('ROWS'), kw('RANGE')),
      choice(
        $._frame_bound,
        seq(kw('BETWEEN'), $._frame_bound, kw('AND'), $._frame_bound),
      ),
    ),

    _frame_bound: $ => choice(
      kws('UNBOUNDED', 'PRECEDING'),
      kws('UNBOUNDED', 'FOLLOWING'),
      kws('CURRENT', 'ROW'),
      seq($._expression, choice(kw('PRECEDING'), kw('FOLLOWING'))),
    ),

    order_by_clause: $ => seq(
      kws('ORDER', 'BY'),
      commaSep1(seq($._expression, optional(choice(kw('ASC'), kw('DESC'))))),
    ),

    limit_clause: $ => seq(
      kw('LIMIT'),
      choice(
        field('count', $._limit_value),
        seq(field('offset', $._limit_value), ',', field('count', $._limit_value)),
        seq(field('count', $._limit_value), kw('OFFSET'), field('offset', $._limit_value)),
      ),
    ),

    _limit_value: $ => choice($.number, $.parameter, $.identifier, $.user_variable),

    locking_clause: $ => choice(
      seq(
        kw('FOR'),
        choice(kw('UPDATE'), kw('SHARE')),
        optional(seq(kw('OF'), commaSep1($.identifier))),
        optional(choice(kw('NOWAIT'), kws('SKIP', 'LOCKED'))),
      ),
      kws('LOCK', 'IN', 'SHARE', 'MODE'),
    ),

    subquery: $ => parens($._query_expression),

    // Changes of data

    column_list: $ => parens(commaSep1($.identifier)),

    _expression: $ => choice(
      $._primary_expression,
      $.unary_expression,
      $.binary_expression,
      $.is_expression,
      $.in_expression,
      $.between_expression,
      $.like_expression,
      $.collate_expression,
      $.assignment_expression,
    ),

    _primary_expression: $ => choice(
      $._literal,
      $.temporal_literal,
      $.column_reference,
      $.function_call,
      $.user_variable,
      $.system_variable,
      $.parameter,
      $.parenthesized_expression,
      $.row_constructor,
      $.subquery,
      $.exists_expression,
      $.case_expression,
      $.interval_expression,
      $.match_expression,
    ),

    column_reference: $ => choice(
      field('name', choice($.identifier, $._keyword_name)),
      seq(field('table', $.identifier), '.', field('name', $.identifier)),
      seq(
        field('schema', $.identifier),
        '.',
        field('table', $.identifier),
        '.',
        field('name', $.identifier),
      ),
    ),

    // These keywords start an expression, and MySQL does not reserve them,
    // so they also name a column.
    _keyword_name: $ => keywordName(
      $,
      'DATE',
      'TIME',
      'TIMESTAMP',
      'POSITION',
      'TRIM',
      'SUBSTRING',
      'SUBSTR',
      'EXTRACT',
      'CAST',
    ),

    function_call: $ => choice(
      prec.right(seq(
        optional(seq(field('schema', $.identifier), '.')),
        field('name', $.identifier),
        $.arguments,
        optional($.over_clause),
      )),
      seq(
        field('name', keywordName($, 'DATE', 'TIME', 'TIMESTAMP')),
        $.arguments,
      ),
      prec.right(seq(
        field('name', keywordName($, 'CURRENT_TIMESTAMP', 'CURRENT_DATE', 'CURRENT_TIME', 'CURRENT_USER', 'LOCALTIME', 'LOCALTIMESTAMP', 'UTC_DATE', 'UTC_TIME', 'UTC_TIMESTAMP')),
        optional(parens(optional($.number))),
      )),
      seq(
        field('name', keywordName($, 'CAST')),
        parens(seq($._expression, kw('AS'), $.data_type)),
      ),
      seq(
        field('name', keywordName($, 'CONVERT')),
        parens(seq(
          $._expression,
          choice(seq(',', $.data_type), seq(kw('USING'), $._charset_name)),
        )),
      ),
      seq(
        field('name', keywordName($, 'EXTRACT')),
        parens(seq($._interval_unit, kw('FROM'), $._expression)),
      ),
      seq(
        field('name', keywordName($, 'TRIM')),
        parens(choice(
          $._expression,
          seq(
            optional(choice(kw('BOTH'), kw('LEADING'), kw('TRAILING'))),
            optional($._expression),
            kw('FROM'),
            $._expression,
          ),
        )),
      ),
      seq(
        field('name', keywordName($, 'SUBSTRING', 'SUBSTR')),
        parens(seq(
          $._expression,
          choice(
            seq(',', $._expression, optional(seq(',', $._expression))),
            seq(kw('FROM'), $._expression, optional(seq(kw('FOR'), $._expression))),
          ),
        )),
      ),
      seq(
        field('name', keywordName($, 'POSITION')),
        parens(seq($._primary_expression, kw('IN'), $._expression)),
      ),
    ),

    arguments: $ => parens(optional(choice(
      '*',
      seq(
        optional(choice(kw('DISTINCT'), kw('ALL'))),
        commaSep1($._expression),
        optional($.order_by_clause),
        optional(seq(kw('SEPARATOR'), $.string)),
      ),
    ))),

    over_clause: $ => seq(
      kw('OVER'),
      choice(field('window', $.identifier), $.window_specification),
    ),

    exists_expression: $ => seq(kw('EXISTS'), $.subquery),

    _interval_unit: _ => choice(
      kw('MICROSECOND'),
      kw('SECOND'),
      kw('MINUTE'),
      kw('HOUR'),
      kw('DAY'),
      kw('WEEK'),
      kw('MONTH'),
      kw('QUARTER'),
      kw('YEAR'),
      kw('SECOND_MICROSECOND'),
      kw('MINUTE_MICROSECOND'),
      kw('MINUTE_SECOND'),
      kw('HOUR_MICROSECOND'),
      kw('HOUR_SECOND'),
      kw('HOUR_MINUTE'),
      kw('DAY_MICROSECOND'),
      kw('DAY_SECOND'),
      kw('DAY_MINUTE'),
      kw('DAY_HOUR'),
      kw('YEAR_MONTH'),
    ),

    unary_expression: $ => choice(
      prec(PREC.not, seq(field('operator', kw('NOT')), field('operand', $._expression))),
      prec(PREC.bang, seq(field('operator', '!'), field('operand', $._expression))),
      prec(PREC.unary, seq(field('operator', choice('-', '+', '~')), field('operand', $._expression))),
      prec.left(PREC.collate, seq(field('operator', kw('BINARY')), field('operand', $._expression))),
    ),

    binary_expression: $ => {
      /** @type {[number, RuleOrLiteral][]} */
      const table = [
        [PREC.or, choice('||', kw('OR'))],
        [PREC.xor, kw('XOR')],
        [PREC.and, choice('&&', kw('AND'))],
        [PREC.bitor, '|'],
        [PREC.bitand, '&'],
        [PREC.shift, choice('<<', '>>')],
        [PREC.add, choice('+', '-')],
        [PREC.multiply, choice('*', '/', '%', kw('DIV'), kw('MOD'))],
        [PREC.bitxor, '^'],
        [PREC.json, choice('->', '->>')],
      ];
      return choice(
        ...table.map(([p, op]) => prec.left(p, seq(
          field('left', $._expression),
          field('operator', op),
          field('right', $._expression),
        ))),
        prec.left(PREC.compare, seq(
          field('left', $._expression),
          field('operator', choice('=', '<=>', '>=', '>', '<=', '<', '<>', '!=')),
          field('right', choice($._expression, $.quantified_subquery)),
        )),
        prec.left(PREC.compare, seq(
          field('left', $._expression),
          field('operator', seq(kw('MEMBER'), optional(kw('OF')))),
          field('right', $.parenthesized_expression),
        )),
      );
    },

    quantified_subquery: $ => seq(
      field('quantifier', choice(kw('ANY'), kw('SOME'), kw('ALL'))),
      $.subquery,
    ),

    in_expression: $ => prec.left(PREC.compare, seq(
      field('left', $._expression),
      optional(kw('NOT')),
      kw('IN'),
      field('right', choice($.subquery, $.list)),
    )),

    identifier: $ => choice($._identifier, $._quoted_identifier),

    _identifier: _ => /[A-Za-z_\u0080-￿][A-Za-z0-9_$\u0080-￿]*/,

    _quoted_identifier: _ => /`([^`]|``)*`/,

    user_variable: _ => token(seq('@', choice(
      /[A-Za-z0-9_$.\u0080-￿]+/,
      /'([^'\\]|\\(.|\n)|'')*'/,
      /"([^"\\]|\\(.|\n)|"")*"/,
      /`([^`]|``)*`/,
    ))),

    parameter: _ => '?',

    // A number is an integer, a decimal number, a number with an exponent,
    // or a hexadecimal or binary number in the form 0x1f or 0b101.
    number: _ => token(choice(
      /(\d+(\.\d*)?|\.\d+)([eE][+-]?\d+)?/,
      /0x[0-9A-Fa-f]+/,
      /0b[01]+/,
    )),

    // A string is in single or double quotes, with backslash escapes and
    // doubled quotes. It can start with N, with a character set such as
    // _utf8mb4, or with X or B for a hexadecimal or binary string.
    string: _ => token(choice(
      /'([^'\\]|\\(.|\n)|'')*'/,
      /"([^"\\]|\\(.|\n)|"")*"/,
      /[nN]'([^'\\]|\\(.|\n)|'')*'/,
      /_[A-Za-z0-9]+'([^'\\]|\\(.|\n)|'')*'/,
      /_[A-Za-z0-9]+"([^"\\]|\\(.|\n)|"")*"/,
      /[xX]'[0-9A-Fa-f]*'/,
      /[bB]'[01]*'/,
    )),
  },
});

/**
 * Returns the rules after INSERT or REPLACE and its modifiers.
 *
 * @param {GrammarSymbols<string>} $
 */
function insertBody($) {
  return [
    optional(kw('INTO')),
    field('table', $.object_reference),
    optional($.partition_list),
    choice(
      seq(
        optional($.column_list),
        $.values_clause,
        optional(seq(kw('AS'), field('alias', $.identifier), optional($.column_list))),
      ),
      seq(kw('SET'), commaSep1($.assignment)),
      seq(optional($.column_list), $.select_statement),
    ),
  ];
}

/**
 * Returns the rules of a view after VIEW.
 *
 * @param {GrammarSymbols<string>} $
 */
function viewBody($) {
  return [
    field('name', $.object_reference),
    optional($.column_list),
    kw('AS'),
    $.select_statement,
    optional(seq(
      kw('WITH'),
      optional(choice(kw('CASCADED'), kw('LOCAL'))),
      kws('CHECK', 'OPTION'),
    )),
  ];
}
